# app/Http/Controllers/FolderController.php
@@ -12,6 +12,61 @@ class FolderController extends Controller
 {
     /**
      * User folder create
+     *
+     * @OA\Post(
+     *     path="/api/folder/create",
+     *     summary="Create folder",
+     *     tags={"Folder"},
+     *     security={ {"sanctum": {} }},
+     *     description="Send bearer token and folder name",
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             @OA\Property(property="folder_name", type="string", example="Holidays")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Folder added",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="success"),
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="object",
+     *                 @OA\Property(
+     *                      property="folder",
+     *                      type="object",
+     *                      @OA\Property(property="id", type="integer", example=5),
+     *                      @OA\Property(property="folder_name", type="string", example="Holidays"),
+     *                      @OA\Property(property="created_by_id", type="integer", example=1),
+     *                      @OA\Property(property="created_at", type="string", format="date-time"),
+     *                      @OA\Property(property="updated_at", type="string", format="date-time"),
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="422",
+     *         description="Invalid input data",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="error"),
+     *             @OA\Property(property="message", type="string", example="Validation errors"),
+     *             @OA\Property(
+     *                  property="data",
+     *                  type="object",
+     *                  @OA\Property(
+     *                      property="folder_name",
+     *                      type="array",
+     *                      @OA\Items(
+     *                          type="string",
+     *                          example="The folder_name has already been taken."
+     *                      )
+     *                  )
+     *              )
+     *         )
+     *     )
+     * )
+     *
      * @param FolderRequest $request
      * @return JsonResponse
      */
@@ -29,7 +84,57 @@ class FolderController extends Controller
     }
 
     /**
-     * Display the specified resource.
+     * Folder structure display
+     *
+     * @OA\Post(
+     *     path="/api/folder/{id}",
+     *     summary="Folder structure display",
+     *     tags={"Folder"},
+     *     security={ {"sanctum": {} }},
+     *     description="Send bearer token and folder id",
+     *     @OA\Parameter(
+     *         description="Folder id",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         example="4"
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Folder structure display",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="success"),
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="object",
+     *                 @OA\Property(
+     *                      property="folder",
+     *                      type="object",
+     *                      @OA\Property(property="id", type="integer", example=5),
+     *                      @OA\Property(property="folder_name", type="string", example="Holidays"),
+     *                      @OA\Property(property="created_by_id", type="integer", example=1),
+     *                      @OA\Property(property="created_at", type="string", format="date-time"),
+     *                      @OA\Property(property="updated_at", type="string", format="date-time"),
+     *                 ),
+     *                 @OA\Property(
+     *                      property="files",
+     *                      type="array",
+     *                      @OA\Items(
+     *                          type="object",
+     *                          @OA\Property(property="name", type="string", example="IMG_0514"),
+     *                          @OA\Property(property="file_name", type="string", example="IMG_0514.jpg"),
+     *                          @OA\Property(property="uuid", type="string", example="5a3e86e4-c09d-4594-8bf4-be8776e8769f"),
+     *                          @OA\Property(property="preview_url", type="string", example=""),
+     *                          @OA\Property(property="original_url", type="string", example="http://localhost/storage/10/IMG_0514.JPG"),
+     *                          @OA\Property(property="extension", type="string", example="JPG"),
+     *                          @OA\Property(property="size", type="integer", example=5199684)
+     *                      ),
+     *                 ),
+     *             )
+     *         )
+     *     )
+     * )
+     *
      * @param string $id
      * @return JsonResponse
      */
@@ -51,6 +156,54 @@ class FolderController extends Controller
 
     /**
      * Update the specified resource in storage.
+     *
+     * @OA\Put(
+     *     path="/api/folder/{id}",
+     *     summary="Update folder",
+     *     tags={"Folder"},
+     *     security={ {"sanctum": {} }},
+     *     description="Send bearer token and folder id",
+     *     @OA\Parameter(
+     *         description="Folder id",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         example="4"
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="application/x-www-form-urlencoded",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="folder_name",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Update folder",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="success"),
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="object",
+     *                 @OA\Property(
+     *                      property="folder",
+     *                      type="object",
+     *                      @OA\Property(property="id", type="integer", example=5),
+     *                      @OA\Property(property="folder_name", type="string", example="new name"),
+     *                      @OA\Property(property="created_by_id", type="integer", example=1),
+     *                      @OA\Property(property="created_at", type="string", format="date-time"),
+     *                      @OA\Property(property="updated_at", type="string", format="date-time"),
+     *                 ),
+     *             )
+     *         )
+     *     )
+     * )
+     *
      * @param FolderRequest $request
      * @param string $id
      * @return JsonResponse
@@ -69,6 +222,43 @@ class FolderController extends Controller
 
     /**
      * Remove the specified resource from storage.
+     *
+     * @OA\Delete(
+     *     path="/api/folder/{id}",
+     *     summary="Delete folder",
+     *     tags={"Folder"},
+     *     security={ {"sanctum": {} }},
+     *     description="Send bearer token and folder id",
+     *     @OA\Parameter(
+     *         description="Folder id",
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         example="4"
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Delete folder",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="success"),
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="object",
+     *                 @OA\Property(
+     *                      property="folder",
+     *                      type="object",
+     *                      @OA\Property(property="id", type="integer", example=5),
+     *                      @OA\Property(property="folder_name", type="string", example="new name"),
+     *                      @OA\Property(property="created_by_id", type="integer", example=1),
+     *                      @OA\Property(property="created_at", type="string", format="date-time"),
+     *                      @OA\Property(property="updated_at", type="string", format="date-time"),
+     *                      @OA\Property(property="deleted_at", type="string", format="date-time")
+     *                 ),
+     *             )
+     *         )
+     *     )
+     * )
+     *
      * @param string $id
      * @return JsonResponse
      */
